# toolformer

./: .pre-commit-config.yaml  README.md  data_generation.py  data_generator.py  data_generator_calc.py  data_generator_calendar.py  data_generator_llmchain.py  data_generator_refactor.py  ds_config_gpt_j.json  gptj_pytorch.py  prompts.py  pyproject.toml  requirements.txt  tools.py  tooltextgen_override.py  train_gptj_toolformer.py  train_pythia_flash_toolformer.py
configs/ds_configs/: ds_config_gpt_j_z3.json
customToolformer/: added_tokens.json  tokenizer_config.json
data_generation/: api_checker.py  base_api.py  calculator.py  calendar.py  llmchain.py  retrieval.py
data_handling/: examine_calculator.py  examine_calendar.py  merge_datasets.py  to_hf_dataset.py
flash_attention/: flash_attention_gptj_wrapper.py  flash_attention_neox_wrapper.py
inference/: .gitignore  README.md  convert_to_triton.py  start_server.sh  triton_config.pbtxt
